scss/components/_container.scss
.card {
	display: inline-block;
	width: 100%;
	transition: all 0.5s ease-in-out;
	border: 1px solid rgba($black, $B-dividers); 
	margin: 0 0 2rem;
	background-color: $white;
	border-radius: 2px;
	box-shadow: 1px 1px 2px #F2F5F6;

	// Use this for transition in pseudo-class :hover
	// box-shadow: 1px 5px 10px #E1E1E1;
	// transition: all 0.5s ease;
}

.card-selected {
	&:active{
		.card-person{
			&>div {
				border: 1px solid #F2F5F6; 
				box-shadow: 5px 5px 7px #F2F5F6;

			}
		}
	}
}

.img-card {
	@extend .card;
	height: auto;
	position: relative;
	.img-card-head {
		position: relative;
		// height: 55%;
		padding-bottom: 75%;
		background-color: $text-black;
		overflow: hidden;
		> img {
			position: absolute;
			z-index: 1;
			width: 100%;
			height: auto;
			top: 0;
			left: 0;
			right: 0;
			bottom: 0;
		}
		.header, .footer {
			position: absolute;
			z-index: 2;
			width: 100%;
			padding: 0.5rem;
			background-color: rgba($black, $B-hinttext);
			.button {
				margin: 0;
			}

		}
		.header {
			top: 0;
			background-color: transparent;
		}
		.footer {
			bottom: 0;
		}
		.story-card {
			margin-left: -10px;
			padding: 0.2rem 2rem 0.5rem;
			background-color: $primary-color;
			display: inline-block;
			position: relative;
			&:after {
				position: absolute;
				content: "";
				top: 0;
				right: -20px;
				width: 18px;
				height: 100%;
				border-top: 55px solid $primary-color;
				border-right: 20px solid transparent;
			}
			h1,
			h2,
			h3,
			h4,
			h5,
			h6,
			p {
				margin: 0;
				color: $white;
			}
			p small {
				font-size: 60%;
				line-height: 1em;
			}
		}
		.mpirica-graph {
			border: none;
			padding: 55px 15px 15px;
		}
	}
	.img-card-body {
		padding: 1rem;
		h1,
		h2,
		h3,
		h4,
		h5,
		h6 {
			color: $text-black;
			margin-bottom: 0;
		}
		p {
			color: $text-black;
			margin-bottom: 0;
			> small {
				font-size: 0.875rem;
			}
		}
		a {
			color: $text-black;
		}
		.media-object {
			margin: 0;
			.media-object-section {
				h1,
				h2,
				h3,
				h4,
				h5,
				h6 {
					font-size: 1rem;
					margin-bottom: 0;
					overflow: hidden;
					white-space: nowrap;
					text-overflow: ellipsis;
					width: 100%;
					// @media only screen and (max-width: 39.9375em) {
					// 	width: 10rem;
					// }
					// @media only screen and (min-width: 40em) {
					// 	width: 40rem;
					// }
					// @media only screen and (min-width: 64em) {
					// 	width: 10rem;
					// }
					> small {
						font-size: 0.875rem;
					}
				}
			}
		}
	}
	&.large {
		height: 32rem;
	}
}

.card-person {
	@extend .card;
	min-height: 124px;
	padding: 1rem;
	.img-wrapper {
		position: relative;
		display: flex;
		align-items: center;
		width: 80px;
		height: 80px;
		border-radius: 50%;
		overflow: hidden;
		> img {
			width: 100%;
			height: auto;
			display: inline-block;
		}
	}
	.person-info {
		.info-name, .info-position, .info-email, .info-phone{
			width: 100%;
			white-space: nowrap;
			overflow: hidden;
			text-overflow: ellipsis;
			margin-bottom: 0;
		}
		.info-name {
			font-family: $header-font-family;
		}
		.info-email, .info-phone{
			color: $primary-color;
			font-size: 0.75rem;
			i {
				margin-right: 1rem;
			}
		}
		.info-position{
			font-size: 0.75rem;
		}
	}
	.person-action {
		.button {
			margin-bottom: 0;
		}
	}
}



.block {
	width: 100%;
	margin-bottom: 2rem;
	border: 1px solid rgba($black, $B-dividers);
	border-radius: 2px;
	overflow: hidden;
	table {
		margin-bottom: 0;
	}
}

.block-container, .block-container-fade {
	padding: 1.9rem 1.3rem;
}

.block-container-fade { 
	background-color: $primary-light;
}

.block-container { 
	background-color: $white;
}

.block-heading {
	color: $white;
	background-color: $primary-color;
	padding: 1rem;
	border-top-left-radius: 2px;
	border-top-right-radius: 2px;
	.h1,
	.h2,
	.h3,
	.h4,
	.h5,
	.h6 {
		font-family: $body-font-family;
		line-height: 2.2rem;
		margin-right: 1rem;
	}
	> label {
		color: rgba($white, $W-text) !important;
	}
	input {
		border: 1px solid rgba($black, $B-dividers) !important;		
	}
}

.page-lead {
	margin: 1rem 0;
	min-height: 2rem;
	.h1,
	.h2,
	.h3,
	.h4,
	.h5,
	.h6 {
		display: inline-block;
		margin-top: 0.5rem;
		margin-bottom: 0.5rem;
		margin-right: 1rem;
		color: rgba($black, $B-text);
		width: 66%;
		vertical-align: top;
		&.primary-color {
			color: darken($primary-color, 5%);
		}
		&.success-color {
			color: darken($success-color, 5%);
		}
		&.subheader {
			color: rgba($black, $B-subtext);
		}
		.action-link {
			margin-left: 1rem;
			margin-bottom: 0;
		}
	}
	small {
		font-weight: normal;
	}
	.button {
		margin-bottom: 0;
	}
	.menu {
		display: inline-block;
		vertical-align: middle;
	}
	> .button {
		margin-bottom: 0;
		vertical-align: middle;
	}
	&.short-label {
		.h1,
		.h2,
		.h3,
		.h4,
		.h5,
		.h6 {
			width: 50%;
		}
	}
	&.sub-heading {
		margin: 0 0 0.5rem;
	}
}

.mpirica-wrapper {
	width: 70px;
	height: 70px;
	position: relative;
	span.rating {
		display: block;
		position: absolute;
		width: 80%;
		top: 30px;
		left: 8px;
		z-index: 4;
		text-align: center;
		color: $white;
		font-weight: bold;
	}
	> img {
		width: 70px;
		height: 70px;
		position: absolute;
		top: 0;
		bottom: 0;
		left: 0;
		right: 0;
		z-index: 3;
	}
	&.large {
		width: 400px;
		height: 400px;
		position: relative;
		span.rating {
			display: block;
			position: absolute;
			width: 80%;
			top: 165px;
			left: 40px;
			z-index: 4;
			text-align: center;
			color: $white;
			font-weight: bold;
			font-size: 6rem;
		}
		> img {
			width: 400px;
			height: 400px;
			position: absolute;
			top: 0;
			bottom: 0;
			left: 0;
			right: 0;
			z-index: 3;
		}
	}
}

